Convert line ending and reformat and upgrade libraries